@@ -1,0 +1,36 @@
+<driver id="driver/capt">
+ <name>capt</name>
+ <url>http://www.boichat.ch/nicolas/capt/</url>
+ <execution>
+  <filter />
+  <prototype></prototype>
+ </execution>
+ <comments>
+  <en>
+
+    Driver for the Canon LBP-810 and LBP-1120 laser
+    winprinters. Should also work with other printers using the CAPT
+    protocol, please report if you have a printer working with this
+    driver which is not listed here.&lt;p&gt;
+
+    Note that the driver talks directly to the USB port. So the
+    printer must be connected via USB. The output destination
+    specified in the printer spooler will not be used. If you use
+    CUPS, set the destination to /dev/null, so that the CUPS backends
+    do not block the USB device.&lt;p&gt;
+
+    The Foomatic PPD files for this driver are not available on
+    linuxprinting.org because they are already contained in the driver
+    package.&lt;p&gt;
+
+  </en>
+ </comments>
+ <printers>
+  <printer>
+   <id>printer/Canon-LBP-810</id>
+  </printer>
+  <printer>
+   <id>printer/Canon-LBP-1120</id>
+  </printer>
+ </printers>
+</driver>
