@@ -1,0 +1,46 @@
+<printer id="printer/Canon-LBP-810">
+  <make>Canon</make>
+  <model>LBP-810</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Toner Cartridge</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <proprietary/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>B</functionality><!--unknown preferred "driver"-->
+  <!--no "contrib_url"-->
+  <driver>capt</driver>
+  <comments>
+    <en>
+
+      This is one of the so-called GDI- or winprinters, a printer with
+      a proprietary data protocol, which is not publicly documented by
+      the manufacturer.&lt;br&gt;
+
+      Fortunately, Nicolas Boichat has reverse-engineered the protocol
+      using &lt;a
+      href="http://www.pragana.net/gdiprinters.html"&gt;the techniques
+      described by Rildo Pragana&lt;/a&gt;, which lead to &lt;a
+      href="show_driver.cgi?driver=capt&amp;fromprinter=Canon-LBP-810"&gt;this
+      driver&lt;/a&gt;.&lt;br&gt;
+
+    </en>
+  </comments>
+</printer>
