@@ -1,4 +1,12 @@
+2005-08-04  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* driver/capt.xml, printer/Canon-LBP-810.xml,
+	  printer/Canon-LBP-1120.xml: Added the CAPT winprinters Canon
+	  LBP-810 and LPB-1120. Added the "capt" driver for these
+	  printers.
+
 2005-08-01  George Liu <george.liu@ussj.ricoh.com>
+
 	* driver/pxlmono.xml
 	  printer/Gestetner-10512.xml
 	  printer/Gestetner-2212.xml
